Update things to do

--- a/src/templates/html/Energy_bus_exercises_Feb_2017.html
+++ b/src/templates/html/Energy_bus_exercises_Feb_2017.html
@@ -15,26 +15,16 @@
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     - Things happening<br>
-    &nbsp;&nbsp;&nbsp; + Lou BlueWater girls Thursday 1st December <br>
-    &nbsp;&nbsp;&nbsp; + Lou London Rockchoir Saturday 3rd December<br>
-    &nbsp;&nbsp;&nbsp; + Frimley flyers Xmas dinner Sunday 4th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou Rock choir Xmas dinner Wednesday 7th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou Xmas fair Saturday 10th December<br>
-    &nbsp;&nbsp;&nbsp; + Out with Sandra Saturday 10th December<br>
-    &nbsp;&nbsp;&nbsp; + Dr Saba appointment Tuesday 13th December<br>
-    &nbsp;&nbsp;&nbsp; + Andy Xmas dinner Wednesday 14th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou Olympia horseshow Friday 16th December<br>
-    &nbsp;&nbsp;&nbsp; + London Duncan/Kelly Saturday 17th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou's mum Xmas meal Sunday 18th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou School Xmas dinner Tuesday 20th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou finishes work Wednesday 21st December<br>
-    &nbsp;&nbsp;&nbsp; + Lou Bocketts Santa Thursday 22st December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Skiing Friday 10th February<br>
+    &nbsp;&nbsp;&nbsp; + <br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Think up presents<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Sort out front door draft<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dig garden<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Buy presents<br>
+    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - Finalise bathroom plans<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Soundproof bathroom<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Valantise day<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Look at windows &nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; <br>
+    <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email structural engineer<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - talk to James (electrician)<br>
@@ -48,8 +38,17 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     MEDIUM TERM<br>
     <br>
-    January<br>
-    &nbsp;&nbsp;&nbsp; - Dr Behr/pacing January 5th 2:25<br>
+    March<br>
+    &nbsp;&nbsp;&nbsp; - Lou Palace half marathon Sunday 19th March <br>
+    <br>
+    May<br>
+    &nbsp;&nbsp;&nbsp; - Rome Sunday 28th May - Friday&nbsp; 2nd June<br>
+    <br>
+    June<br>
+    &nbsp;&nbsp;&nbsp; - Dr Saba Tuesday June 20th 10:15<br>
+    <br>
+    July<br>
+    &nbsp;&nbsp;&nbsp; - Dr Behr/pacing Thursday July 20th 1:30<br>
     <br>
     <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
