--- a/src/templates/html/House_plan.html
+++ b/src/templates/html/House_plan.html
@@ -11,7 +11,55 @@
     <div style="text-align: center;"><big><big><span style="text-decoration: underline;">House
             Plan</span></big></big><br>
       <br>
-      <div style="text-align: left;">13/11/2016</div>
+      <div style="text-align: left;"><br>
+        5/2/2017<br>
+        SHORT-TERM PLAN<br>
+        &nbsp;&nbsp;&nbsp; + Get Paul to at the same as Andy<br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lou or Gary to sort out this
+        week <br>
+        &nbsp;&nbsp;&nbsp; + Do something with the front door gaps<br>
+        &nbsp;&nbsp;&nbsp; + Look at Windows and get quotes<br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Matt Perfect?<br>
+        &nbsp;&nbsp;&nbsp; + Design bathroom change<br>
+        <br>
+        1/12/2016<br>
+        (December)<br>
+        &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
+          quotes from two other electricians</span><br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">To
+          sort out on the 16/11/2016</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Phone
+          James</span> 3/12/2016&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; DONE (awaiting response)<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
+          gutters</span> DONE<br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Speak
+          to Andy about</span> <br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+          kitchen</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp; <br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+          loft insulation</span><br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+          dining room chimley</span> &nbsp;&nbsp;&nbsp; Gary to look at<br>
+        &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+          bathroom wall</span> &nbsp;&nbsp;&nbsp; Gary to look at<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Reglective
+          radiators</span>&nbsp;&nbsp;&nbsp; 12/12/2016 DONE<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Insulate
+          the garage/lag pipes</span> DONE<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Do
+          something with the front door letterbox</span> DONE<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
+          boiler man advice</span> DONE<br>
+        <br>
+        13/11/2016</div>
     </div>
     (November)<br>
     &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Lag cold
@@ -21,57 +69,11 @@
     &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Sort out
       side gate</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
     <br>
-    1/12/2016<br>
-    SHORT-TERM PLAN (December)<br>
-    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
-      quotes from two other electricians</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">To
-      sort out on the 16/11/2016</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Phone
-      James</span> 3/12/2016&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; DONE (awaiting response)<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
-      gutters</span> DONE<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Speak
-      to Andy about</span> <br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
-      kitchen</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; <br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
-      loft insulation</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
-      dining room chimley</span> &nbsp;&nbsp;&nbsp; Gary to look at<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
-      bathroom wall</span> &nbsp;&nbsp;&nbsp; Gary to look at<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Reglective radiators&nbsp;&nbsp;&nbsp; 12/12/2016<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Insulate the garage/lag pipes<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Get Paul to at the same as Andy<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lou or Gary to sort out this week<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Do something with the front door letterbox<br>
-    &nbsp;&nbsp;&nbsp; + Do something with the front door gaps<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Talk to Andy's uncle<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Look at Windows and get quotes<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Matt Perfect?<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Do something with the back door gaps<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Design bathroom change<br>
-    <br>
-    &nbsp;&nbsp;&nbsp; + Chimley/front quote<br>
-    <br>
     MEDIUM TERM<br>
     &nbsp;&nbsp;&nbsp; + Do something with the back door gaps<br>
+    &nbsp;&nbsp;&nbsp; + Chimley/front quote<br>
     &nbsp;&nbsp;&nbsp; + Get structural engineer round<br>
     &nbsp;&nbsp;&nbsp; + Complete electrics<br>
-    &nbsp;&nbsp;&nbsp; + Get boiler man advice<br>
     <br>
     LONG TERM (More idea following talks to Paul and Andy, no order at the
     moment)<br>
