--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -22,6 +22,8 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
       bus</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_June_2017.html">Energy
+      bus exercises July 2017</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_June_2017.html">Energy
       bus exercises June 2017</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_May_2017.html">Energy
       bus exercises May 2017</a><br>
