--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,6 +14,8 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
+    <a href="Energy_bus_exercises_November_2017.html">My visions November 2017<span
+        style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_July_2017.html">My visions July 2017<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_June_2017.html">My visions June 2017<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_May_2017.html">My visions May 2017<span style="color: black;"></span></a><br>
