--- a/src/templates/html/Energy_bus_exercises_November_2017.html
+++ b/src/templates/html/Energy_bus_exercises_November_2017.html
@@ -27,7 +27,9 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Mum birthday / Ted wood<br>
     <br>
     November<br>
-    &nbsp;&nbsp;&nbsp; - Guildford fireshow Saturday 4th November &nbsp;&nbsp; <br>
+    &nbsp;&nbsp;&nbsp; - Guildford fireshow Saturday 4th November<br>
+    &nbsp;&nbsp;&nbsp; - Bookham fireworks 4:30 Sunday 5th November &nbsp;&nbsp;
+    <br>
     <br>
     &nbsp;&nbsp;&nbsp; - Lou Guildford midwife 8:50 Friday 10th November <br>
     &nbsp;&nbsp;&nbsp; - Dorking Blood test 14:45 Friday 10th November<br>
@@ -41,10 +43,13 @@
     &nbsp;&nbsp;&nbsp; - St Georges Consultant 14:50 Thursday 23rd November<br>
     <br>
     December<br>
+    &nbsp;&nbsp;&nbsp; - Karen 40th Saturday 2nd December<br>
     &nbsp;&nbsp;&nbsp; - Guildford Gastroenterology 11:30 Wednesday 6th December<br>
     <br>
+    &nbsp;&nbsp;&nbsp; - Rob and Shelby Wedding 19:00 Saturday 9th December<br>
     &nbsp;&nbsp;&nbsp; - Frimley Flyers lunch 12:00 Sunday 10th December<br>
     <br>
+    &nbsp;&nbsp;&nbsp; - George Xmas Party 11:00 Sunday 17th December<br>
     &nbsp;&nbsp;&nbsp; - Parker Xmas Sunday 17th December<br>
     <br>
     <br>
