Add IET lecture to November

--- a/src/templates/html/Energy_bus_exercises_November_2017.html
+++ b/src/templates/html/Energy_bus_exercises_November_2017.html
@@ -37,6 +37,8 @@
     &nbsp;&nbsp;&nbsp; - Home 11th/12th November<br>
     &nbsp;&nbsp;&nbsp; - Hatherleigh carnaval 11th November<br>
     <br>
+    &nbsp;&nbsp;&nbsp; - IET lecture 19:30 Wednesday 15th November<br>
+    <br>
     &nbsp;&nbsp;&nbsp; - Lou Ultrasound 12:40 Guildford hospital Friday 17th
     November<br>
     <br>
