--- a/src/templates/html/Energy_bus_exercises_January_2018.html
+++ b/src/templates/html/Energy_bus_exercises_January_2018.html
@@ -35,14 +35,36 @@
     <br>
     <br>
     February<br>
+    &nbsp;&nbsp;&nbsp; - Grant 6:30pm Friday 2nd February<br>
+    &nbsp;&nbsp;&nbsp; - Lou sisters here Friday 9th February<br>
+    &nbsp;&nbsp;&nbsp; - HALF TERM 9th-18th February<br>
+    &nbsp;&nbsp;&nbsp; - Sandra and Nick here Saturday 17th February<br>
+    &nbsp;&nbsp;&nbsp; - IET 7:30pm Wednesday 21st February<br>
+    &nbsp;&nbsp;&nbsp; - Keith Stag Friday 23rd-25th February<br>
     <br>
-    <br>
+    March<br>
+    &nbsp;&nbsp;&nbsp; - Kareen disco Saturday 3rd March<br>
+    &nbsp;&nbsp;&nbsp; - NCT 7:15-9:45 Tuesday 6th March<br>
+    &nbsp;&nbsp;&nbsp; - Nokia meetup Fleet 7:00pm Friday 16th March<br>
+    &nbsp;&nbsp;&nbsp; - NCT 1:30-4:30 Saturday 17th March<br>
+    &nbsp;&nbsp;&nbsp; - NCT 7:15-9:45 Tuesday 20th March<br>
+    &nbsp;&nbsp;&nbsp; - Hannah hen do 23rd-25th March<br>
+    &nbsp;&nbsp;&nbsp; - NCT 7:15-9:45 Tuesday 27th March<br>
+    &nbsp;&nbsp;&nbsp; - EASTER 30th March - 2nd April<br>
+    &nbsp;&nbsp;&nbsp; - EASTER HOLIDAYS 30th March - 17th April<br>
     April<br>
+    &nbsp;&nbsp;&nbsp; - NCT 7:15-9:45 Tuesday 3rd April<br>
     &nbsp;&nbsp;&nbsp; - Dr Saba 9:30 Tuesday 3rd April<br>
+    &nbsp;&nbsp;&nbsp; - Pacing 12:00 Tuesday 3rd April<br>
+    &nbsp;&nbsp;&nbsp; - London Marathon Sunday 22nd April<br>
     <br>
     June <br>
-    &nbsp;&nbsp;&nbsp; - Dr Behr 4:10 21st June<br>
+    &nbsp;&nbsp;&nbsp; - Dr Behr 4:10 Thursday 21st June<br>
     <br>
+    July<br>
+    &nbsp;&nbsp;&nbsp; - Echocardiogram 11:50 Thursday 26th July<br>
+    &nbsp;&nbsp;&nbsp; - Exercise tolerance12:00 Thursday 26th July<br>
+    &nbsp;&nbsp;&nbsp; - Hannah Wedding Thursday 26th July - 29th July<br>
     <br>
     ON + Lou<br>
     ON + Job<br>
