--- a/src/templates/html/Energy_bus_exercises_January_2018.html
+++ b/src/templates/html/Energy_bus_exercises_January_2018.html
@@ -17,10 +17,9 @@
     - Things happening<br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint front room<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - financial plan<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - document finances<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - extension plan<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - IET<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - 2nd builder quotation<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - car tyre<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - oak beam<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dentist<br>
@@ -30,13 +29,11 @@
     <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel sheet (auto size) and
     give to Lou<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
-    &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Architect<br>
-    <br>
     <br>
     February<br>
     &nbsp;&nbsp;&nbsp; - Grant 6:30pm Friday 2nd February<br>
     &nbsp;&nbsp;&nbsp; - Lou sisters here Friday 9th February<br>
+    &nbsp;&nbsp;&nbsp; - Midwife Monday 12th February<br>
     &nbsp;&nbsp;&nbsp; - HALF TERM 9th-18th February<br>
     &nbsp;&nbsp;&nbsp; - Sandra and Nick here Saturday 17th February<br>
     &nbsp;&nbsp;&nbsp; - IET 7:30pm Wednesday 21st February<br>
