--- a/src/templates/html/Energy_bus_exercises_December_2017.html
+++ b/src/templates/html/Energy_bus_exercises_December_2017.html
@@ -11,19 +11,24 @@
     <div style="text-align: center;"><a href="http://www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
       <br>
-      <div style="text-align: left;">30/10/2017</div>
+      <div style="text-align: left;">30/11/2017</div>
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     - Things happening<br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Karem card/gift<br>
-    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - shutters<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Karen
+      card/gift</span><br>
+    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">shutters</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - pacing clinic<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - pensions<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - 2nd builder quotation<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - medical spreadsheet<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Ted skiing<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - oak beam<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint front room<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - pacing clinic<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dentist<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - pensions<br>
-    <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - doctor<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - sort out Dhiren<br>
     <br>
@@ -35,10 +40,11 @@
     <br>
     <br>
     December<br>
-    &nbsp;&nbsp;&nbsp; - Karen 40th Saturday 2nd December<br>
+    &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Karen
+      40th Saturday 2nd December</span><br>
     &nbsp;&nbsp;&nbsp; - Guildford Gastroenterology 11:30 Wednesday 6th December<br>
     <br>
-    &nbsp;&nbsp;&nbsp; - Lou meet Karen Friday 8th December<br>
+    &nbsp;&nbsp;&nbsp; - Lou meet Kareen Friday 8th December<br>
     &nbsp;&nbsp;&nbsp; - Andy potentially moving Lynhayes 9th December<br>
     &nbsp;&nbsp;&nbsp; - Rob and Shelby Wedding 19:00 Saturday 9th December<br>
     &nbsp;&nbsp;&nbsp; - Frimley Flyers lunch 12:00 Sunday 10th December<br>
