--- a/src/templates/html/Energy_bus_exercises_December_2017.html
+++ b/src/templates/html/Energy_bus_exercises_December_2017.html
@@ -19,30 +19,37 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Karen
       card/gift</span><br>
     &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">shutters</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - pacing clinic<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - pensions<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">pacing
+      clinic</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">pensions</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">medical
+      spreadsheet</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">windscreen
+      wash</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine 6th December<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - 2nd builder quotation<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - medical spreadsheet<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Ted skiing<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - oak beam<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint front room<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - oak beam<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dentist<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - doctor<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - car tyre<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - IET<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - sort out Dhiren<br>
     <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel sheet (auto size) and
     give to Lou<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine 6th December<br>
-    <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Architect<br>
     <br>
     <br>
     December<br>
     &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Karen
       40th Saturday 2nd December</span><br>
-    &nbsp;&nbsp;&nbsp; - Guildford Gastroenterology 11:30 Wednesday 6th December<br>
+    &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Guildford
+      Gastroenterology 11:30 Wednesday 6th December</span><br>
     <br>
     &nbsp;&nbsp;&nbsp; - Lou meet Kareen Friday 8th December<br>
     &nbsp;&nbsp;&nbsp; - Andy potentially moving Lynhayes 9th December<br>
