--- a/src/templates/html/Energy_bus_exercises_December_2017.html
+++ b/src/templates/html/Energy_bus_exercises_December_2017.html
@@ -26,15 +26,15 @@
       spreadsheet</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">windscreen
       wash</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine 6th December<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - 2nd builder quotation<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Ted skiing<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">doctor</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint front room<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - financial plan<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - extension plan<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - IET<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - 2nd builder quotation<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - car tyre<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - oak beam<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dentist<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - doctor<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - car tyre<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - IET<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - sort out Dhiren<br>
