Add IET lecture

--- a/src/templates/html/Energy_bus_exercises_May_2018.html
+++ b/src/templates/html/Energy_bus_exercises_May_2018.html
@@ -16,7 +16,6 @@
     SHORT-TERM VISION - NEXT MONTH<br>
     - Things happening<br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read drugs book<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read cricket magazine<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint/fill ceiling rose<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dig garden<br>
@@ -42,6 +41,7 @@
     &nbsp;&nbsp;&nbsp; - Doctors appointment 5:30 Friday 11th May<br>
     &nbsp;&nbsp;&nbsp; - Kareens Disco Saturday 12th May<br>
     &nbsp;&nbsp;&nbsp; - Lou hair trial Sunday 13th May<br>
+    &nbsp;&nbsp;&nbsp; - IET lecture 7:30 Tuesday 15th May <br>
     &nbsp;&nbsp;&nbsp; - Jacks party Saturday 19th May<br>
     &nbsp;&nbsp;&nbsp; - Lunch Sandra Sunday 20th May<br>
     <br>
