--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,6 +14,7 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
+    <a href="Energy_bus_exercises_Aug_2018.html">My visions August 2018<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_July_2018.html">My visions July 2018<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_June_2018.html">My visions June 2018<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_May_2018.html">My visions May 2018<span style="color: black;"></span></a><br>
