--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -21,6 +21,8 @@
       plan</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
       bus</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Oct_2018.html">Energy
+      bus exercises October 2018</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Aug_2018.html">Energy
       bus exercises August 2018</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_July_2018.html">Energy
