Add Virgin media + update October 2018

--- a/src/templates/html/Energy_bus_exercises_Oct_2018.html
+++ b/src/templates/html/Energy_bus_exercises_Oct_2018.html
@@ -29,14 +29,44 @@
     &nbsp;&nbsp;&nbsp; - Holiday Wednesday 10th - Wednesday 17th October<br>
     &nbsp;&nbsp;&nbsp; - Kath and Tim over Wednesday 24th October<br>
     &nbsp;&nbsp;&nbsp; - Dentist Thursday 25th October<br>
+    &nbsp;&nbsp;&nbsp; - Doctor's Thursday 25th October 16:50<br>
     <br>
     November<br>
+    &nbsp;&nbsp;&nbsp; - Dinner Hans Friday 2nd November<br>
+    &nbsp;&nbsp;&nbsp; - Lou Katy's hen do Saturday 3rd November 16:30 <br>
     &nbsp;&nbsp;&nbsp; - Josh birthday Sunday 11th November<br>
+    &nbsp;&nbsp;&nbsp; - NCT dinner ours Friday 16th November<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood Sunday 25th November 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Lou Bluewater - Thursday 29th November<br>
     <br>
     December<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 2nd December 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Henry and Jack christening - Sunday 2nd December<br>
+    &nbsp;&nbsp;&nbsp; - Katie &amp; Simon Wedding 19:00pm Saturday 8th December<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 9th December 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 16th December 10:00<br>
+    &nbsp;&nbsp;&nbsp; - George get together - Sunday 16th December 11:00<br>
+    &nbsp;&nbsp;&nbsp; - NCT get together - Sunday 16th December 10:00<br>
     &nbsp;&nbsp;&nbsp; - Pacing 9:00 Tuesday 18th December <br>
     &nbsp;&nbsp;&nbsp; - Dr Saba 9:30 Tuesday 18th December<br>
     &nbsp;&nbsp;&nbsp; - Dr Behr 1:30 Thursday 20th December<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; - Bocketts farm - father christmas - Friday 21st<br>
+    &nbsp;&nbsp;&nbsp; - Lou mum Christmas do - Sunday 23rd December<br>
+    &nbsp;&nbsp;&nbsp; - <br>
+    <br>
+    January<br>
+    &nbsp;&nbsp;&nbsp; - Tommy &amp; Maggie Saturday 5th January<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 6th January 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 13th January 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 20th January 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 27th January 10:00<br>
+    <br>
+    February<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 3rd February 10:00<br>
+    <br>
+    <br>
     <br>
     ON + Lou<br>
     ON + Job<br>
