--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -10,10 +10,10 @@
     <h1 style="text-align: center;">Website Index<br>
     </h1>
     <a href="home.html">Home page</a><br>
-    &nbsp;&nbsp;&nbsp; * <a href="html/Personal.html">Personal</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Lou_Andy_things_to_do.html">Andy-Lou
+    &nbsp;&nbsp;&nbsp; * <a href="Personal.html">Personal</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Lou_Andy_things_to_do.html">Andy-Lou
       things to do 2016</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Lou_Andy_things_to_do_2017.html">Andy-Lou
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Lou_Andy_things_to_do_2017.html">Andy-Lou
       things to do 2017</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Things_to_do.html">Things
       to do</a><br>
@@ -73,6 +73,8 @@
     &nbsp;&nbsp;&nbsp; * <a href="html/cricket.html">Cricket</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="html/raspberry_pi.html">Raspberry pi</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="html/apache.html">Web design</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Virgin_media.html">Virgin
+      Media change</a><br>
     &nbsp;&nbsp;&nbsp; * Work<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/cv.html">CV</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/nsn.html">NSN</a><br>
