--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -67,37 +67,37 @@
       bus exercises October 2014</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/The_Secret.html">The
       secret</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Bands_I_like.html">Bands
-      I like</a><span style="color: #0000ee;"><span style="text-decoration: underline;"></span></span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Bands_I_like.html">Bands I
+      like</a><span style="color: #0000ee;"><span style="text-decoration: underline;"></span></span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Mortgage.html">Mortgage</a><br>
-    &nbsp;&nbsp;&nbsp; * <a href="html/cricket.html">Cricket</a><br>
-    &nbsp;&nbsp;&nbsp; * <a href="html/raspberry_pi.html">Raspberry pi</a><br>
-    &nbsp;&nbsp;&nbsp; * <a href="html/apache.html">Web design</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="cricket.html">Cricket</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="raspberry_pi.html">Raspberry pi</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="apache.html">Web design</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Virgin_media.html">Virgin
       Media change</a><br>
     &nbsp;&nbsp;&nbsp; * Work<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/cv.html">CV</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/nsn.html">NSN</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Renesas.html">Renesas</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Accenture.html">Accenture</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Accenture.html">Accenture</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; Nokia<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Coding<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="html/C_optimization.html">C
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="C_optimization.html">C
       optimization</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="html/git.html">GIT</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="html/java.html">Java</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="git.html">GIT</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="java.html">Java</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Linux &nbsp; &nbsp;&nbsp;&nbsp; <br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/ls_ll.html">ls/ll</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/symbolic_links.html">symlinks</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="ls_ll.html">ls/ll</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="symbolic_links.html">symlinks</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Virtual_machine.html">Virtual
       Machine setup</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Other links<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/ANPR.html">ANPR</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="ANPR.html">ANPR</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; LTE<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Modulation.html">Modulation</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Real_timeOS.html">Real-time
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Modulation.html">Modulation</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Real_timeOS.html">Real-time
       OS</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/speech_codec.html">Speech
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="speech_codec.html">Speech
       codec</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; Ex<a href="html/Excel_tips.html"></a>cel<br>
   </body>
