--- a/src/templates/html/Energy_bus_exercises_Oct_2018.html
+++ b/src/templates/html/Energy_bus_exercises_Oct_2018.html
@@ -45,7 +45,7 @@
     &nbsp;&nbsp;&nbsp; - Henry and Jack christening - Sunday 2nd December<br>
     &nbsp;&nbsp;&nbsp; - Katie &amp; Simon Wedding 19:00pm Saturday 8th December<br>
     &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 9th December 10:00<br>
-    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 16th December 10:00<br>
+    &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Saturday 15th December 10:00<br>
     &nbsp;&nbsp;&nbsp; - George get together - Sunday 16th December 11:00<br>
     &nbsp;&nbsp;&nbsp; - NCT get together - Sunday 16th December 10:00<br>
     &nbsp;&nbsp;&nbsp; - Pacing 9:00 Tuesday 18th December <br>
@@ -66,6 +66,8 @@
     February<br>
     &nbsp;&nbsp;&nbsp; - Evie Swimming Lockwood - Sunday 3rd February 10:00<br>
     <br>
+    April<br>
+    &nbsp;&nbsp;&nbsp; - Dentist - Thursday 18th April 14:00<br>
     <br>
     <br>
     ON + Lou<br>
