--- a/src/templates/html/Energy_bus_exercises_Nov_2018.html
+++ b/src/templates/html/Energy_bus_exercises_Nov_2018.html
@@ -25,20 +25,28 @@
     <br>
     <br>
     November<br>
+    &nbsp;&nbsp;&nbsp; - Lou Out - 20:00 Friday 23rd November<br>
+    &nbsp;&nbsp;&nbsp; - Lou Molly party - 3-5 Saturday 24th November<br>
+    &nbsp;&nbsp;&nbsp; - Christmas drinks, Faras 20:00 Saturday 24th November<br>
     &nbsp;&nbsp;&nbsp; - Lou Bluewater - Thursday 29th November<br>
+    &nbsp;&nbsp;&nbsp; - NCT dinner here - Friday 30th November<br>
     <br>
     December<br>
     &nbsp;&nbsp;&nbsp; - Henry and Jack christening - Sunday 2nd December<br>
     &nbsp;&nbsp;&nbsp; - Katie &amp; Simon Wedding 19:00pm Saturday 8th December<br>
+    &nbsp;&nbsp;&nbsp; - Rock choir Xmas do - Wednesday 12th December<br>
+    &nbsp;&nbsp;&nbsp; - NCT get together - Saturday 15th December 12:30<br>
     &nbsp;&nbsp;&nbsp; - George get together - Sunday 16th December 11:00<br>
-    &nbsp;&nbsp;&nbsp; - NCT get together - Sunday 16th December 10:00<br>
     &nbsp;&nbsp;&nbsp; - Pacing 9:00 Tuesday 18th December <br>
     &nbsp;&nbsp;&nbsp; - Dr Saba 9:30 Tuesday 18th December<br>
     &nbsp;&nbsp;&nbsp; - Dr Behr 1:30 Thursday 20th December<br>
     <br>
     &nbsp;&nbsp;&nbsp; - Bocketts farm - father christmas - Friday 21st<br>
     &nbsp;&nbsp;&nbsp; - Lou mum Christmas do - Sunday 23rd December<br>
-    &nbsp;&nbsp;&nbsp; - <br>
+    &nbsp;&nbsp;&nbsp; - Christmas 24th -25th Sarah's<br>
+    &nbsp;&nbsp;&nbsp; - Boxing day Lou's mum's<br>
+    &nbsp;&nbsp;&nbsp; - 28th Golf?<br>
+    &nbsp;&nbsp;&nbsp; 28/29 Hilton<br>
     <br>
     January<br>
     &nbsp;&nbsp;&nbsp; - Tommy &amp; Maggie Saturday 5th January<br>
