--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -9,7 +9,7 @@
                   to home page)</a></small></small></small></small></small></h1>
     <h1 style="text-align: center;">Website Index<br>
     </h1>
-    <a href="home.html">Home page1</a><br>
+    <a href="index.html">Home page</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="Personal.html">Personal</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Lou_Andy_things_to_do.html">Andy-Lou
       things to do 2016</a><br>
