--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -19,8 +19,10 @@
       to do</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="House_plan.html">House
       plan</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Energy_bus.html">Energy
       bus</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_November_2020.html">Energy
+      bus exercises November 2020</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_March_2020.html">Energy
       bus exercises March 2020</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Jan_2019.html">Energy
