--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,6 +14,7 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
+    <a href="Energy_bus_exercises_November_2020.html">My visions November 2020<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_March_2020.html">My visions March 2020<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_Jan_2019.html">My visions January 2019<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_Nov_2018.html">My visions November 2018<span style="color: black;"></span></a><br>
